Updating Unit tests for domain layer